--- a/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
+++ b/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" MouseWheel="View3DControl_MouseWeel">
+             d:DesignHeight="450" d:DesignWidth="800" MouseWheel="UserControl_MouseWeel" MouseMove="UserControl_MouseMove" MouseDoubleClick="UserControl_MouseDoubleClick">
     <Grid Background="#00000000">
         <Viewport3D x:Name="Viewport" Margin="1,1,1,1">
             <Viewport3D.Camera>
@@ -42,6 +42,13 @@
 
                     </GeometryModel3D>
                 </ModelVisual3D.Content>
+                <ModelVisual3D.Transform>
+                    <RotateTransform3D>
+                        <RotateTransform3D.Rotation>
+                            <AxisAngleRotation3D x:Name="Rotation" Axis="1 1 1"/>
+                        </RotateTransform3D.Rotation>
+                    </RotateTransform3D>
+                </ModelVisual3D.Transform>
             </ModelVisual3D>
         </Viewport3D>
 
