--- a/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
+++ b/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" MouseWheel="UserControl_MouseWeel" MouseMove="UserControl_MouseMove" MouseDoubleClick="UserControl_MouseDoubleClick">
+             d:DesignHeight="450" d:DesignWidth="800" MouseWheel="UserControl_MouseWeel" MouseMove="UserControl_MouseMove" MouseDoubleClick="UserControl_MouseDoubleClick" PreviewMouseMove="UserControl_PreviewMouseMove" PreviewKeyDown="UserControl_PreviewKeyDown">
     <Grid Background="#00000000">
         <Viewport3D x:Name="Viewport" Margin="1,1,1,1">
             <Viewport3D.Camera>
-                <PerspectiveCamera x:Name = "MainCamera" Position = "6 5 4" LookDirection = "-6 -5 -4">
+                <PerspectiveCamera x:Name = "MainCamera" Position = "10 5 9" LookDirection = "-10 -5 -9">
                 </PerspectiveCamera>
             </Viewport3D.Camera>
 
@@ -20,15 +20,14 @@
                 </ModelVisual3D.Content>
             </ModelVisual3D>
 
-            <ModelVisual3D x:Name = "SAMObject">
+            <ModelVisual3D>
                 <ModelVisual3D.Content>
                     <GeometryModel3D>
 
                         <GeometryModel3D.Geometry>
                             <MeshGeometry3D x:Name = "meshMain"
-                        Positions = "0 0 0  1 0 0  0 1 0  1 1 0  0 0 1  1 0 1  0 1 1  0 1 1"  
-                        TriangleIndices = "2 3 1  3 1 0  7 1 3  7 5 1  6 5 7  6 4 5  6 2 0
-                        2 0 4  2 7 3  2 6 7  0 1 5  0 5 4">
+                        Positions = "0 0 0  1 0 0  0 1 0"
+                        TriangleIndices = "2 1 0">
                             </MeshGeometry3D>
                         </GeometryModel3D.Geometry>
 
@@ -45,9 +44,10 @@
                 <ModelVisual3D.Transform>
                     <RotateTransform3D>
                         <RotateTransform3D.Rotation>
-                            <AxisAngleRotation3D x:Name="Rotation" Axis="1 1 1"/>
+                            <AxisAngleRotation3D x:Name="Rotation" Axis="1 0 0" Angle="90"/>
                         </RotateTransform3D.Rotation>
                     </RotateTransform3D>
+
                 </ModelVisual3D.Transform>
             </ModelVisual3D>
         </Viewport3D>
