--- a/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
+++ b/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
@@ -6,7 +6,13 @@
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" MouseWheel="UserControl_MouseWeel" MouseMove="UserControl_MouseMove" MouseDoubleClick="UserControl_MouseDoubleClick" PreviewMouseMove="UserControl_PreviewMouseMove" PreviewKeyDown="UserControl_PreviewKeyDown">
-    <Grid Background="#00000000">
+    <Grid Background="#00000000" ContextMenuOpening="Grid_ContextMenuOpening">
+        <Grid.ContextMenu>
+            <ContextMenu x:Name="ContextMenu_Grid">
+                <MenuItem Header="Zoom"/>
+            </ContextMenu>
+        </Grid.ContextMenu>
+        <TextBlock x:Name ="Information"  Text="Information" HorizontalAlignment="Left" VerticalAlignment="Bottom"></TextBlock>
         <Viewport3D x:Name="Viewport" Margin="1,1,1,1">
             <Viewport3D.Camera>
                 <PerspectiveCamera x:Name = "MainCamera" Position = "10 5 9" LookDirection = "-10 -5 -9">
@@ -14,6 +20,7 @@
             </Viewport3D.Camera>
 
             <ModelVisual3D x:Name = "Light">
+
                 <ModelVisual3D.Content>
                     <DirectionalLight x:Name = "DirectionalLight" Direction = "-1,-1,-1">
                     </DirectionalLight>
