--- a/SAM_UI/SAM.Analytical.UI.WPF/App.xaml
+++ b/SAM_UI/SAM.Analytical.UI.WPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
-             StartupUri="AnalyticalWindow.xaml">
+             StartupUri="Windows/AnalyticalWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
