Show Method Implemented

--- a/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
+++ b/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
@@ -21,13 +21,13 @@
 
             <ModelVisual3D x:Name = "ModelVisual3D_DirectionalLight">
                 <ModelVisual3D.Content>
-                    <DirectionalLight x:Name = "DirectionalLight" Direction = "-1,-1,-1" Color="Gray"/>
+                    <DirectionalLight x:Name = "DirectionalLight" Direction = "-1,-1,-1" Color="GhostWhite"/>
                 </ModelVisual3D.Content>
             </ModelVisual3D>
 
             <ModelVisual3D x:Name = "ModelVisual3D_AmbientLight">
                 <ModelVisual3D.Content>
-                    <AmbientLight x:Name = "AmbientLight" Color="DimGray"/>
+                    <AmbientLight x:Name = "AmbientLight" Color="Gray"/>
                 </ModelVisual3D.Content>
             </ModelVisual3D>
 
