--- a/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
+++ b/SAM_UI/SAM.Analytical.UI.WPF/Controls/View3DControl.xaml
@@ -15,7 +15,7 @@
         <TextBlock x:Name ="Information"  Text="Information" HorizontalAlignment="Left" VerticalAlignment="Bottom"></TextBlock>
         <Viewport3D x:Name="Viewport" Margin="1,1,1,1">
             <Viewport3D.Camera>
-                <PerspectiveCamera x:Name = "MainCamera" Position = "10 5 9" LookDirection = "-10 -5 -9" Changed="MainCamera_Changed">
+                <PerspectiveCamera x:Name = "MainCamera" Position = "10 5 9" LookDirection = "-10 -5 -9" Changed="MainCamera_Changed" NearPlaneDistance="1">
                 </PerspectiveCamera>
             </Viewport3D.Camera>
 
@@ -24,7 +24,7 @@
                     <ModelVisual3D.Children>
                         <ModelVisual3D>
                             <ModelVisual3D.Content>
-                                <AmbientLight x:Name = "AmbientLight" Color="LightGray"/>
+                                <AmbientLight x:Name = "AmbientLight" Color="DimGray"/>
                             </ModelVisual3D.Content>
                         </ModelVisual3D>
                         <!--<ModelVisual3D>
@@ -32,6 +32,11 @@
                                 <SpotLight x:Name = "SpotLight" Color="White" Direction="-1,-1,-1" Position="0,0,0"/>
                             </ModelVisual3D.Content>
                         </ModelVisual3D>-->
+                        <ModelVisual3D>
+                            <ModelVisual3D.Content>
+                                <DirectionalLight x:Name = "DirectionalLight" Color="LightGray" Direction="-1,-1,-1"/>
+                            </ModelVisual3D.Content>
+                        </ModelVisual3D>
                     </ModelVisual3D.Children>
                 </ModelVisual3D>
             </Viewport3D.Children>
