AnalyticalModelControl Updated (Context Menu Added)

--- a/SAM_UI/SAM.Analytical.UI.WPF/Controls/AnalyticalModelControl.xaml
+++ b/SAM_UI/SAM.Analytical.UI.WPF/Controls/AnalyticalModelControl.xaml
@@ -5,9 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
     <Grid>
-        <TreeView  Margin="0,0,0,0" Name="TreeView_Main">
+        <TreeView Margin="0,0,0,0" Name="TreeView_Main" ContextMenuOpening="TreeView_Main_ContextMenuOpening">
+            <TreeView.ContextMenu>
+                <ContextMenu Name ="ContextMenu"></ContextMenu>
+            </TreeView.ContextMenu>
+
+
         </TreeView>
     </Grid>
 </UserControl>
