--- a/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:s="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
+        xmlns:userControl="clr-namespace:SAM.Analytical.UI.WPF;assembly=SAM.Analytical.UI.WPF"
         mc:Ignorable="d"
         Title="Analytical" 
         WindowState="Maximized"
@@ -395,76 +396,76 @@
             </Ribbon.ApplicationMenu>
             <RibbonTab x:Name="RibbonTab_File" Header="File">
                 <RibbonGroup x:Name="RibbonGroup_File_General" Header="General">
-                    <RibbonButton x:Name="RibbonButton_General_NewAnalyticalModel" Label="New" LargeImageSource="../Resources/SAM_New.png"/>
-                    <RibbonButton x:Name="RibbonButton_General_OpenAnalyticalModel" Label="Open" LargeImageSource="../Resources/SAM_Open.png"/>
-                    <RibbonButton x:Name="RibbonButton_General_SaveAnalyticalModel" Label="Save" LargeImageSource="../Resources/SAM_Save.png"/>
-                    <RibbonButton x:Name="RibbonButton_General_SaveAsAnalyticalModel" Label="Save As" LargeImageSource="../Resources/SAM_SaveAs.png"/>
-                    <RibbonButton x:Name="RibbonButton_General_CloseAnalyticalModel" Label="Close" LargeImageSource="../Resources/SAM_Close.png"/>
+                    <RibbonButton x:Name="RibbonButton_General_NewAnalyticalModel" Label="New"/>
+                    <RibbonButton x:Name="RibbonButton_General_OpenAnalyticalModel" Label="Open"/>
+                    <RibbonButton x:Name="RibbonButton_General_SaveAnalyticalModel" Label="Save"/>
+                    <RibbonButton x:Name="RibbonButton_General_SaveAsAnalyticalModel" Label="Save As"/>
+                    <RibbonButton x:Name="RibbonButton_General_CloseAnalyticalModel" Label="Close"/>
                 </RibbonGroup>
             </RibbonTab>
             <RibbonTab x:Name="RibbonTab_Edit" Header="Edit">
                 <RibbonGroup x:Name="RibbonGroup_Edit_General" Header="General">
-                    <RibbonButton x:Name="RibbonButton_Edit_Location" Label="Location" LargeImageSource="../Resources/SAM_Location.png"/>
-                    <RibbonButton x:Name="RibbonButton_Edit_Properties" Label="Properties" LargeImageSource="../Resources/SAM_AnalyticalModelProperties.png"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_Location" Label="Location"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_Properties" Label="Properties"/>
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Edit_Import" Header="Import">
-                    <RibbonButton x:Name="RibbonButton_Edit_Import" Label="Import" LargeImageSource="../Resources/SAM_Import.png"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_Import" Label="Import"/>
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Edit_Check" Header="Check">
-                    <RibbonButton x:Name="RibbonButton_Edit_Check" Label="ModelCheck" LargeImageSource="../Resources/SAM_ModelCheck.png"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_Check" Label="ModelCheck"/>
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Edit_ModelLibrary" Header="Model Library">
-                    <RibbonButton x:Name="RibbonButton_Edit_Materials" Label="Materials" LargeImageSource="../Resources/SAM_MaterialLibrary.png"/>
-                    <RibbonButton x:Name="RibbonButton_Edit_InternalConditions" Label="Internal Conditions" LargeImageSource="../Resources/SAM_InternalCondition.png"/>
-                    <RibbonButton x:Name="RibbonButton_Edit_Profiles" Label="Profiles" LargeImageSource="../Resources/SAM_ProfileLibrary.png"/>
-                    <RibbonButton x:Name="RibbonButton_Edit_Spaces" Label="Spaces" LargeImageSource="../Resources/SAM_Space.png"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_Materials" Label="Materials"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_InternalConditions" Label="Internal Conditions"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_Profiles" Label="Profiles"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_Spaces" Label="Spaces"/>
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Edit_Constructions" Header="Constructions">
-                    <RibbonButton x:Name="RibbonButton_Edit_Constructions" Label="Constructions" LargeImageSource="../Resources/SAM_ConstructionLibrary.png"/>
-                    <RibbonButton x:Name="RibbonButton_Edit_ApertureConstructions" Label="Aperture Constructions" LargeImageSource="../Resources/SAM_ApertureConstruction.png"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_Constructions" Label="Constructions"/>
+                    <RibbonButton x:Name="RibbonButton_Edit_ApertureConstructions" Label="Aperture Constructions"/>
                 </RibbonGroup>
             </RibbonTab>
             <RibbonTab x:Name="RibbonTab_Simulate" Header="Siumlate">
                 <RibbonGroup x:Name="RibbonGroup_Simulate_WeatherData" Header="Weather Data">
-                    <RibbonButton x:Name="RibbonButton_Simulate_WeatherData" Label="Weather Data" LargeImageSource="../Resources/SAM_WeatherData.png"/>
-                    <RibbonButton x:Name="RibbonButton_Simulate_Import" Label="Import" LargeImageSource="../Resources/SAM_Import.png"/>
+                    <RibbonButton x:Name="RibbonButton_Simulate_WeatherData" Label="Weather Data"/>
+                    <RibbonButton x:Name="RibbonButton_Simulate_Import" Label="Import"/>
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Simulate_Simulate" Header="Simulate">
-                    <RibbonButton x:Name="RibbonButton_Simulate_SolarSimulation" Label="Solar Simulation" LargeImageSource="../Resources/SAM_SolarCalculator.png"/>
-                    <RibbonButton x:Name="RibbonButton_Simulate_EnergySimulation" Label="Energy Simulation" LargeImageSource="../Resources/SAM_EnergySimulation.png"/>
+                    <RibbonButton x:Name="RibbonButton_Simulate_SolarSimulation" Label="Solar Simulation"/>
+                    <RibbonButton x:Name="RibbonButton_Simulate_EnergySimulation" Label="Energy Simulation"/>
                 </RibbonGroup>
             </RibbonTab>
             <RibbonTab x:Name="RibbonTab_Results" Header="Results">
                 <RibbonGroup x:Name="RibbonGroup_Results_Mollier" Header="Mollier Diagram">
-                    <RibbonButton x:Name="RibbonButton_Results_AirHandlingUnitDiagram" Label="AHU" LargeImageSource="../Resources/SAM_AirHandlingUnitDiagram.png"/>
-                    <RibbonButton x:Name="RibbonButton_Results_SpaceDiagram" Label="Space" LargeImageSource="../Resources/SAM_SpaceDiagram.png"/>
+                    <RibbonButton x:Name="RibbonButton_Results_AirHandlingUnitDiagram" Label="AHU"/>
+                    <RibbonButton x:Name="RibbonButton_Results_SpaceDiagram" Label="Space"/>
                 </RibbonGroup>
             </RibbonTab>
             <RibbonTab x:Name="RibbonTab_Tools" Header="Tools">
                 <RibbonGroup x:Name="RibbonGroup_Tools_Library" Header="Library">
-                    <RibbonButton x:Name="RibbonButton_Tools_EditLibrary" Label="Edit Library" LargeImageSource="../Resources/SAM_EditLibrary.png"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_EditLibrary" Label="Edit Library"/>
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Tools_Tas" Header="Tas">
-                    <RibbonButton x:Name="RibbonButton_Tools_OpenT3D" Label="Open T3D" LargeImageSource="../Resources/SAM_T3D.png"/>
-                    <RibbonButton x:Name="RibbonButton_Tools_OpenTBD" Label="Open TBD" LargeImageSource="../Resources/SAM_TBD.png"/>
-                    <RibbonButton x:Name="RibbonButton_Tools_OpenTSD" Label="Open TSD" LargeImageSource="../Resources/SAM_TSD.png"/>
-                    <RibbonButton x:Name="RibbonButton_Tools_OpenTPD" Label="Open TPD" LargeImageSource="../Resources/SAM_TPD.png"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_OpenT3D" Label="Open T3D"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_OpenTBD" Label="Open TBD"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_OpenTSD" Label="Open TSD"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_OpenTPD" Label="Open TPD"/>
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Tools_Hydra" Header="Hydra">
-                    <RibbonButton x:Name="RibbonButton_Tools_Hydra" Label="Open Hydra" LargeImageSource="../Resources/SAM_Hydra.png"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_Hydra" Label="Open Hydra"/>
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Tools_AnalyticalModel" Header="Analytical Model">
-                    <RibbonButton x:Name="RibbonButton_Tools_Clean" Label="Clean" LargeImageSource="../Resources/SAM_Clean.png"/>
-                    <RibbonButton x:Name="RibbonButton_Tools_AddMissingObjects" Label="Missing Elements" LargeImageSource="../Resources/SAM_AddMissingObjects.png"/>
-                    <RibbonButton x:Name="RibbonButton_Tools_PrintRoomDataSheets" Label="Print RDS" LargeImageSource="../Resources/SAM_PrintRDS.png"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_Clean" Label="Clean"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_AddMissingObjects" Label="Missing Elements"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_PrintRoomDataSheets" Label="Print RDS"/>
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Tools_MollierChart" Header="Mollier Diagram">
-                    <RibbonButton x:Name="RibbonButton_Tools_OpenMollierChart" Label="Show" LargeImageSource="../Resources/SAM_MollierDiagram.png"/>
+                    <RibbonButton x:Name="RibbonButton_Tools_OpenMollierChart" Label="Show"/>
                 </RibbonGroup>
             </RibbonTab>
             <RibbonTab x:Name="RibbonTab_Help" Header="Help">
                 <RibbonGroup x:Name="RibbonGroup_Help_General" Header="General">
-                    <RibbonButton x:Name="RibbonButton_Help_Wiki" Label="Wiki" LargeImageSource="../Resources/SAM_Wiki.png"/>
+                    <RibbonButton x:Name="RibbonButton_Help_Wiki" Label="Wiki"/>
                 </RibbonGroup>
             </RibbonTab>
         </Ribbon>
