Bug Fixes for Center Empty View

--- a/WPF/SAM.Geometry.UI.WPF/Windows/GeometryWindow.xaml
+++ b/WPF/SAM.Geometry.UI.WPF/Windows/GeometryWindow.xaml
@@ -8,11 +8,11 @@
         Title="GeometryWindow" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <local:ViewControl x:Name="ViewControl" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"/>
+        <local:ViewControl x:Name="ViewControl" Grid.Column="0" Grid.Row="0"/>
     </Grid>
 </Window>
