--- a/WPF/SAM.Geometry.UI.WPF/Controls/ViewControl.xaml
+++ b/WPF/SAM.Geometry.UI.WPF/Controls/ViewControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Geometry.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Initialized="UserControl_Initialized">
     <Grid Background="#00000000" ContextMenuOpening="Grid_ContextMenuOpening">
         <Grid.ContextMenu>
             <ContextMenu x:Name="ContextMenu_Grid">
@@ -14,11 +14,6 @@
         </Grid.ContextMenu>
         <TextBlock x:Name ="Information"  Text="Information" HorizontalAlignment="Left" VerticalAlignment="Bottom"></TextBlock>
         <Viewport3D x:Name="Viewport" Margin="1,1,1,1">
-            <Viewport3D.Camera>
-                <PerspectiveCamera x:Name = "MainCamera" Position = "10 5 9" LookDirection = "-10 -5 -9" Changed="MainCamera_Changed" NearPlaneDistance="1">
-                </PerspectiveCamera>
-            </Viewport3D.Camera>
-
             <Viewport3D.Children>
                 <ModelVisual3D x:Name="Lights">
                     <ModelVisual3D.Children>
