--- a/WPF/SAM.Geometry.UI.WPF/Controls/ViewControl.xaml
+++ b/WPF/SAM.Geometry.UI.WPF/Controls/ViewControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Geometry.UI.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Initialized="UserControl_Initialized">
+             d:DesignHeight="450" d:DesignWidth="800" Initialized="UserControl_Initialized" MouseDoubleClick="UserControl_MouseDoubleClick">
     <Grid Background="#00000000" ContextMenuOpening="Grid_ContextMenuOpening">
         <Grid.ContextMenu>
             <ContextMenu x:Name="ContextMenu_Grid">
