--- a/WPF/SAM.Geometry.UI.WPF/Windows/GeometryWindow.xaml
+++ b/WPF/SAM.Geometry.UI.WPF/Windows/GeometryWindow.xaml
@@ -22,10 +22,11 @@
             <RibbonTab x:Name="RibbonTab_View" Header="View">
                 <RibbonGroup x:Name="RibbonGroup_View_Mode" Header="Mode">
                     <RibbonButton x:Name="ribbonButton_View_Mode" Label="Mode" Click="RibbonButton_View_Mode_Click"/>
+                    <RibbonButton x:Name="ribbonButton_View_Json" Label="Json" Click="RibbonButton_View_Json_Click"/>
                 </RibbonGroup>
             </RibbonTab>
         </Ribbon>
-        <Grid>
+        <Grid x:Name="grid">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="5"/>
@@ -35,7 +36,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <local:ViewportControl x:Name="viewportControl" Grid.Column="0" Grid.Row="0" Margin="0,0,-0.4,-0.4"/>
-            <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" />
+            <GridSplitter x:Name="gridSplitter" Grid.Column="1" Width="5" HorizontalAlignment="Stretch" />
             <core:JsonControl x:Name="jsonControl" Grid.Column="2" Grid.Row="0" Margin="0,0,-0.4,-0.4"/>
         </Grid>
     </DockPanel>
