Text3DObject Implemented

--- a/WPF/SAM.Geometry.UI.WPF/Controls/ViewportControl.xaml
+++ b/WPF/SAM.Geometry.UI.WPF/Controls/ViewportControl.xaml
@@ -238,7 +238,8 @@
                 Length="20"
                 MajorDistance="1"
                 MinorDistance="1"
-                Thickness="0.005" Fill="LightGray" />
+                Thickness="0.005" 
+                Fill="LightGray" Visible="True"/>
 
         </HelixToolkit:HelixViewport3D>
     </Grid>
